--- a/diseases-blood-dic.html
+++ b/diseases-blood-dic.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Дисеминирано вътресъдово съсирване (ДИК синдром) при кучета и котки</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Дисеминирано вътресъдово съсирване (ДИК синдром)</h1>
+                    <h1>Дисеминирано вътресъдово съсирване (ДИК синдром) при кучета и котки</h1>
                     
                     <h2>Какво е Дисеминирано вътресъдово съсирване (ДИК синдром) и какво го причинява?</h2>
                     <p>Дисеминираното вътресъдово съсирване (ДИК) е сериозно и <strong>животозастрашаващо</strong> състояние, при което <strong>кръвосъсирващата система</strong> на организма става <strong>прекалено активна</strong>. Това води до <strong>прекомерно образуване на съсиреци</strong> в кръвния поток, което може да блокира притока на кръв към жизненоважни органи.</p>
