--- a/diseases-circulatory-mmvd.html
+++ b/diseases-circulatory-mmvd.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Миксоматозно заболяване на митралната клапа (МЗМК) при кучетата</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Миксоматозно заболяване на митралната клапа (МЗМК)</h1>
+                    <h1>Миксоматозно заболяване на митралната клапа (МЗМК) при кучетата</h1>
                     
                     
                     <h2>Какво е миксоматозно заболяване на митралната клапа (миксоматозно заболяване на митралната клапа (МЗМК)) и какво го причинява?</h2>
