--- a/diseases-genitourinary-benign-prostatic-hyperplasia.html
+++ b/diseases-genitourinary-benign-prostatic-hyperplasia.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Доброкачествена хиперплазия на простатата (ДХП) при кучетата</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Доброкачествена хиперплазия на простатата (ДХП)</h1>
+                    <h1>Доброкачествена хиперплазия на простатата (ДХП) при кучетата</h1>
                     
                     <h2>Какво е доброкачествена хиперплазия на простатата (ДХП) и какво я причинява?</h2>
                     <p>Доброкачествената хиперплазия на простатата (ДХП) е често срещано състояние при по-<strong>възрастни мъжки кучета</strong>, при което простатната жлеза се уголемява поради <strong>хормонални промени</strong>. Това е доброкачествено (неканцерогенно) увеличение на простатата, основно причинено от дисбаланс на тестостерон и други хормони с напредването на възрастта. За разлика от инфекции или тумори, ДХП <strong>не се причинява от бактерии или ракови образувания</strong>, а от естествени процеси на стареене и хормонални промени.</p>
