--- a/diseases-genitourinary-chronic-kidney-disease.html
+++ b/diseases-genitourinary-chronic-kidney-disease.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Хронична бъбречна недостатъчност (ХБН) при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Хронична бъбречна недостатъчност (ХБН)</h1>
+                    <h1>Хронична бъбречна недостатъчност (ХБН) при кучетата и котките</h1>
                     
                     <h2>Какво е хронична бъбречна недостатъчност (ХБН) и какво я причинява?</h2>
                     <p>Хроничната бъбречна недостатъчност (ХБН) е прогресиращо състояние при кучетата и котките, при което бъбреците постепенно губят способността си да функционират. Бъбреците “<strong>филтрират“ отпадните продукти</strong> от кръвта, регулират количеството на течностите и минералите в организма. Когато не работят правилно, <strong>в организма се натрупват токсини</strong>, което води до здравословни проблеми.</p>
