--- a/diseases-genitourinary-cryptorchidism.html
+++ b/diseases-genitourinary-cryptorchidism.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Крипторхизъм при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Крипторхизъм</h1>
+                    <h1>Крипторхизъм при кучетата и котките</h1>
                     <h2>Какво е крипторхизъм и какво го причинява?</h2>
                     <p>Крипторхизмът е състояние, при което едното или двете тестиси <strong>не се спускат в скротума</strong>. Обикновено при мъжките кученца тестисите се развиват в коремната кухина и постепенно се спускат в скротума до осмата седмица, а при котараците – до 7-мия месец. В някои случаи този процес не протича правилно, което води до задържани тестиси.</p>
                     
