--- a/diseases-genitourinary-flutd.html
+++ b/diseases-genitourinary-flutd.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Заболяване на долните уринарни пътища (ЗДУП) при котката</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Заболяване на долните уринарни пътища при котката (ЗДУП)</h1>
+                    <h1>Заболяване на долните уринарни пътища (ЗДУП) при котката</h1>
                     
                     <h2>Какво е ЗДУП и какво го причинява? </h2>
                     <p><strong>Заболяване на долните уринарни пътища при котката</strong> (ЗДУП, англ.: Feline lower urinary tract disease, ЗДУП) е термин, който <strong>обхваща различни заболявания</strong> <strong>на долните пикочни пътища </strong>при котките, включително:</p>
