--- a/diseases-genitourinary-mammary-hyperplasia.html
+++ b/diseases-genitourinary-mammary-hyperplasia.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Хиперплазия на млечните жлези при котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Хиперплазия на млечните жлези</h1>
+                    <h1>Хиперплазия на млечните жлези при котките</h1>
                     
                     <h2>Какво е хиперплазия на млечните жлези и какво я причинява?</h2>
                     <p>Хиперплазията на млечните жлези, известна още като фиброаденоматозна хиперплазия на млечните жлези, е доброкачествено (нераково) <strong>уголемяване на една или повече млечни жлези</strong> при <strong>котките</strong>. Това състояние е свързано с хормоните и най-често се среща при млади, некастрирани женски котки.</p>
