--- a/diseases-genitourinary-pyometra.html
+++ b/diseases-genitourinary-pyometra.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Пиометра при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Пиометра</h1>
+                    <h1>Пиометра при кучетата и котките</h1>
                     
                     <h2>Какво е пиометра и какво я причинява?</h2>
                     <p>Пиометрата е заболяване при <strong>женските кучета и котки</strong>, което предствлява <strong>събиране на гной в матката</strong>. Възниква не главно заради бактериална инфекция, но <strong>заради постоянните хормонални промени</strong>, които се случват при некастрираните животни.</p>
