--- a/diseases-genitourinary-urinary-incontinence.html
+++ b/diseases-genitourinary-urinary-incontinence.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Уринарна инконтиненция при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Уринарна инконтиненция</h1>
+                    <h1>Уринарна инконтиненция при кучетата и котките</h1>
                     
                     <h2>Какво е уринарна инконтиненция и какво я причинява?</h2>
                     <p>Уринарната инконтиненция е неволно изпускане на урина. Това означава, че домашният Ви любимец не може напълно да контролира пикочния си мехур, което води до инциденти вкъщи. Причините могат да бъдат различни, включително:</p>
