--- a/diseases-infectious-feline-calicivirus-infection.html
+++ b/diseases-infectious-feline-calicivirus-infection.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Калицивироза</title>
+    <title>Муцуна | Калицивироза при котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -669,7 +669,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Калицивироза</h1>
+                    <h1>Калицивироза при котките</h1>
                     <h2>Какво е котешка калицивироза и какво я причинява?</h2>
                     <p>Калицивирозата е заболяване по котките, което се причинява от вирус – <strong>Feline
                             Calicivirus</strong> (FCV). За нещастие, той е резистентен към повечето дезинфектанти и се
