--- a/diseases-infectious-rabies.html
+++ b/diseases-infectious-rabies.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Бяс</title>
+    <title>Муцуна | Бяс при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Бяс</h1>
+                    <h1>Бяс при кучетата и котките</h1>
 
                     <h2>Какво е бяс и какво я причинява?</h2>
                     <p>Бесът е заболяване не само по кучетата и котките, но <strong>по всички бозайници</strong>
