--- a/diseases-neoplasms-lymphoma.html
+++ b/diseases-neoplasms-lymphoma.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Лимфома</title>
+    <title>Муцуна | Лимфома при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Лимфома</h1>
+                    <h1>Лимфома при кучетата и котките</h1>
                     <h2>Какво е лимфома и какво я причинява?</h2>
                     <p>Лимфомата (известна още като лимфосарком) е един от най-често срещаните ракови заболявания при
                         кучета и котки. Лимфомата се развива от <strong>клетките на имунната система</strong>
