--- a/diseases-neoplasms-mammary-gland-tumor.html
+++ b/diseases-neoplasms-mammary-gland-tumor.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Тумор на млечната жлеза</title>
+    <title>Муцуна | Тумор на млечната жлеза при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -669,7 +669,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Тумор на млечната жлеза</h1>
+                    <h1>Тумор на млечната жлеза при кучетата и котките</h1>
                     <h2>Какво е тумор на млечната жлеза и какво я причинява?</h2>
                     <p>Туморът на млечната жлеза представлява образувание при кучета и котки, което на допир се усеща
                         като малка твърда буца. Водеща причина за образуването му са хормоналните проблеми при
