--- a/diseases-nervous-epilepsy.html
+++ b/diseases-nervous-epilepsy.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Лимфома</title>
+    <title>Муцуна | Епилепсия при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Епилепсия</h1>
+                    <h1>Епилепсия при кучетата и котките</h1>
                     
                     <h2>Какво е епилепсия и какво я причинява?</h2>
                     <p>Епилепсията е неврологично заболяване при кучетата и котките, което причинява <strong>повтарящи се гърчове</strong> поради необичайна електрическа активност в мозъка.</p>
