--- a/diseases-parasitic-fleas.html
+++ b/diseases-parasitic-fleas.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Бълхи</title>
+    <title>Муцуна | Наличие на бълхи при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
                 
                 <div id="articleContent">
                     <div id="article-content--dogs">
-                        <h1>Бълхи</h1>
+                        <h1>Наличие на бълхи при кучетата и котките</h1>
                         <p>Бълхите са едни от <strong>най-честите паразити</strong>, които засягат домашните любимци. Тези малки насекоми могат да причинят не само дискомфорт, но и сериозни здравословни проблеми. Тази статия съдържа <strong>всичко, което трябва да знаете</strong> за тях, за да защитите Вашия любимец.</p>
 
                         <h2>Какво представляват бълхите?</h2>
@@ -744,19 +744,6 @@
                         <p>С правилната грижа и превенция, можете да предпазите Вашия любимец от дискомфорта и здравословните проблеми, причинени от бълхи. Поддържането на редовни обезпаразитяващи мерки, обяснени от Вашия ветеринар, ще гарантира щастлив и здрав живот за Вашия четириног приятел!</p>
                         
                         <br>
-                        <div class="other-article">
-                            <a href="./ticks.html">
-                                <div class="other-article-prev">
-                                    « Предходна статия:
-                                </div>
-                            </a>
-
-                            <a href="./lymphoma.html">
-                                <div class="other-article-next">
-                                    Следваща статия »
-                                </div>
-                            </a>
-                        </div>
 
                     </div>
                 </div>
