--- a/diseases-respiratory-brachycephalic-syndrome.html
+++ b/diseases-respiratory-brachycephalic-syndrome.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Брахицефален синдром (БЦС) при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,8 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Брахицефален синдром (БЦС)</h1>
-                    
+                    <h1>Брахицефален синдром (БЦС) при кучетата и котките</h1>
                     
                     <h2>Какво представлява брахицефалният синдром на дихателните пътища (БЦС)?</h2>
                     <p>Брахицефалният синдром на дихателните пътища (БЦС) е състояние, което засяга породи кучета и котки <strong>с плоски лица</strong> (<strong>брахицефални</strong>). Тези породи имат сплескани носове, което може да доведе до затруднено дишане. Това се случва, защото дихателните им пътища са <strong>прекалено малки или тесни</strong>, което затруднява нормалното им дишане.</p>
