--- a/diseases-circulatory-hypertrophic-cardiomyopathy.html
+++ b/diseases-circulatory-hypertrophic-cardiomyopathy.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Хипертрофична кардиомиопатия (ХКМ) при котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Хипертрофична кардиомиопатия (ХКМ)</h1>
+                    <h1>Хипертрофична кардиомиопатия (ХКМ) при котките</h1>
                     
                     <h2>Какво представлява хипертрофичната кардиомиопатия (ХКМ) и какво я причинява?</h2>
                     <p>Хипертрофичната кардиомиопатия (<strong>ХКМ</strong>) е най-честото сърдечно заболяване при котките. То причинява необичайно удебеляване на стената на сърцето, особено на лявата камера. Това затруднява нормалното изпомпване на кръвта, което може да доведе до сериозни усложнения.</p>
