--- a/diseases-infectious-ehrlichiosis.html
+++ b/diseases-infectious-ehrlichiosis.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Ерлихиоза</title>
+    <title>Муцуна | Ерлихиоза при кучетата</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Ерлихиоза</h1>
+                    <h1>Ерлихиоза при кучетата</h1>
 
                     <h2>Какво е ерлихиоза и какво я причинява и разпространява?</h2>
                     <p>Ерлихиозата е заболяване при кучетата (и изключително рядко при котките), което се причинява от
