--- a/diseases-infectious-feline-panleukopenia.html
+++ b/diseases-infectious-feline-panleukopenia.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Панлевкопения</title>
+    <title>Муцуна | Панлевкопения при котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -669,7 +669,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Панлевкопения</h1>
+                    <h1>Панлевкопения при котките</h1>
                     <h2>Какво е панлевкопения и какво я причинява?</h2>
                     <p>Панлевкопенията е заболяване по котките, което се причинява от вирус, нар. Feline Panleukopenia
                         Virus (FPV). Вирусът атакува червата и костния мозък. Вирусът е изключително устойчив и може да
