--- a/diseases-nervous-hydrocephaly.html
+++ b/diseases-nervous-hydrocephaly.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Лимфома</title>
+    <title>Муцуна | Хидроцефалия при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Хидроцефалия</h1>
+                    <h1>Хидроцефалия при кучетата и котките</h1>
                     
                     <h2>Какво е хидроцефалия и какво я причинява?</h2>
                     <p>Хидроцефалията е състояние, при което прекомерно количество <strong>мозъчна течност</strong> (цереброспинална течност – <em>CSF</em>) <strong>се натрупва в мозъка</strong>, което води до <strong>повишено налягане</strong>. Това налягане може да причини увреждане на мозъка и неврологични симптоми. Хидроцефалията може да бъде <strong>вродена</strong> (присъстваща при раждането) поради генетични фактори или <strong>придобита</strong> в по-късен етап от живота в резултат на инфекции, тумори, травми или други медицински състояния.</p>
