--- a/diseases-parasitic-heartworm.html
+++ b/diseases-parasitic-heartworm.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Дирофилариоза</title>
+    <title>Муцуна | Дирофилариоза при кучетата</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Дирофилариоза</h1>
+                    <h1>Дирофилариоза при кучетата</h1>
                     <h2>Какво е дирофилазиоза и какво я причинява?</h2>
                     <p>Дирофилариозата (или още сърдечни червеи) е заболяване при <strong>кучетата</strong> (много рядко
                         при котките), което се причинява от паразити (<em>Dirofilaria immitis</em>), които
