--- a/diseases-parasitic-tapeworms.html
+++ b/diseases-parasitic-tapeworms.html
@@ -1,7 +1,7 @@
 <!-- HEADER --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муцуна | Цестодоза</title>
+    <title>Муцуна | Цестодоза при кучетата и котките</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="./home-menu.css">
@@ -670,7 +670,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Цестодоза</h1>
+                    <h1>Цестодоза при кучетата и котките</h1>
 
                     <h2>Какво представляват Цестодите?</h2>
                     <p><strong>Цестодите</strong> (макар и неправилно, разговорно се нар. <strong>глисти</strong>) са
